<resources>
    <string name="app_name">Charvis</string>
    <string name="not_charvis_connecting">차비스와 연결되지 않았습니다\n차비스와 연결해 주세요!</string>
    <string name="yes_charvis_connecting">차비스와 연결되었습니다\n차비스와 안전운전하세요!</string>
    <string name="wake_up">졸음 운전이 감지되었습니다!\n빨리 일어나세요!</string>
    <string name="turn_off_alarm">알람끄기</string>
    <string name="connection_charvis">차비스와 연결하기</string>
    <string name="talk_with_charvis">차비스와 대화하기</string>
    <string name="close_sleepy_area">가까운 졸음 쉼터 가기</string>
    <string name="want_to_talk_with_charvis">나랑 대화하자. </string>
    <string name="want_email">사용하실 아이디(이메일)</string>
    <string name="want_psw">사용하실 비밀번호</string>
    <string name="want_psw_check">비밀번호 재확인</string>
    <string name="input_email">아이디</string>
    <string name="input_nick_name">닉네임</string>
    <string name="age">나이</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="no_choice">선택안함</string>
    <string name="have_children">자녀 유무</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="input_psw">비밀번호</string>
    <string name="input_interest">관심사</string>
    <string name="make_user">계정생성</string>
    <string name="sign_in">로그인</string>
    <string name="sign_out">로그아웃</string>
    <string name="sign_up">회원가입</string>
    <string name="next">다음</string>
    <string name="change_psw">비밀번호 변경</string>
    <string name="delete_user">회원탈퇴</string>
    <string name="name">사용자 이름</string>
    <string name="email">사용자 이메일</string>
    <string name="child_gender">자녀 성별</string>
    <string name="son">아들</string>
    <string name="daughter">딸</string>
    <string name="current_password">현재 비밀번호</string>
    <string name="check_password">비밀번호가 다릅니다.</string>
    <string name="check_email">이메일형식이 아닙니다.</string>
    <string name="check_nickname">닉네임을 입력해주세요.</string>
    <string name="check_interest">관심사를 입력해주세요.</string>
    <string name="error">오류가 발생하였습니다.</string>
    <string name="new_password">신규 비밀번호</string>
    <string name="new_password_check">신규 비밀번호 재확인</string>
    <string name="certification_for_delete">Account를 영구적으로 삭제하기 전에 먼저 비밀번호를 입력해주세요.</string>
    <string name="google">https://www.google.co.kr/?hl=ko</string>



    <string-array name="interest_array">
        <item>직접 입력</item>
        <item>여행</item>
        <item>음식</item>
        <item>영화</item>
        <item>음악</item>
        <item>독서</item>
        <item>사진 촬영</item>
        <item>스포츠</item>
        <item>패션</item>
        <item>미술</item>
        <item>공예</item>
        <item>원예</item>
        <item>요리</item>
        <item>게임</item>
        <item>댄스</item>
        <item>볼링</item>
        <item>수영</item>
        <item>하이킹</item>
        <item>캠핑</item>
        <item>낚시</item>
        <item>서핑</item>
        <item>스키</item>
        <item>테니스</item>
        <item>골프</item>
        <item>요가</item>
        <item>명상</item>
        <item>역사</item>
        <item>과학</item>
        <item>기술</item>
        <item>우주</item>
        <item>지리</item>
        <item>정치</item>
        <item>경제</item>
        <item>심리학</item>
        <item>철학</item>
        <item>종교</item>
        <item>신비주의</item>
        <item>작곡</item>
        <item>연기</item>
        <item>마술</item>
        <item>서예</item>
        <item>만화</item>
        <item>애니메이션</item>
        <item>코스프레</item>
        <item>마술</item>
        <item>퍼즐</item>
        <item>보드게임</item>
        <item>카드게임</item>
        <item>수집</item>
        <item>모형 제작</item>
        <item>로봇공학</item>
        <item>전자공학</item>
        <item>목공</item>
        <item>자동차</item>
        <item>오토바이</item>
        <item>자전거</item>
        <item>클래식 음악</item>
        <item>재즈 음악</item>
        <item>록 음악</item>
        <item>힙합 음악</item>
        <item>컨트리 음악</item>
        <item>복고 음악</item>
        <item>세계 음악</item>
        <item>댄스 음악</item>
        <item>팝 음악</item>
        <item>시</item>
        <item>에세이</item>
        <item>자서전</item>
        <item>역사 소설</item>
        <item>추리 소설</item>
        <item>판타지 소설</item>
        <item>공상 과학 소설</item>
        <item>로맨스 소설</item>
        <item>고전 문학</item>
        <item>현대 문학</item>
        <item>세계 문학</item>
    </string-array>

</resources>