<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/arrow_back"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintEnd_toStartOf="@id/charvis_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/charvis_logo"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:background="@drawable/charvis_logo"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_nick_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="90dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/input_nick_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/charvis_logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_nick_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_interest"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/input_interest"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_nick_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/interest_spinner"
        android:layout_width="100dp"
        android:layout_height="57dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/spinner_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/user_interest"
        app:layout_constraintTop_toBottomOf="@id/user_nick_name"
        />

    <TextView
        android:id="@+id/user_gender_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text="성별"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/user_gender_group"
        app:layout_constraintBottom_toBottomOf="@id/user_gender_group"
        />

    <RadioGroup
        android:id="@+id/user_gender_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_marginRight="40dp"
        android:checkedButton="@+id/radio_button_no_choice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_interest">

        <RadioButton
            android:id="@+id/radio_button_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:layout_marginEnd="10dp"
            />

        <RadioButton
            android:id="@+id/radio_button_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:layout_marginEnd="10dp" />

        <RadioButton
            android:id="@+id/radio_button_no_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_choice"
            android:layout_marginEnd="10dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/user_child_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text="@string/have_children"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/user_child_group"
        app:layout_constraintBottom_toBottomOf="@id/user_child_group"
        />

    <RadioGroup
        android:id="@+id/user_child_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_marginRight="40dp"
        android:checkedButton="@+id/radio_button_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_gender_group">

        <RadioButton
            android:id="@+id/radio_button_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_marginEnd="10dp"
            />

        <RadioButton
            android:id="@+id/radio_button_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_marginEnd="10dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/user_child_gender_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text="@string/child_gender"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/user_child_son"
        app:layout_constraintBottom_toBottomOf="@id/user_child_son"
        />

    <CheckBox
        android:id="@+id/user_child_son"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/son"
        android:layout_marginTop="10dp"
        android:checked="false"
        android:orientation="horizontal"
        android:layout_marginRight="35dp"
        app:layout_constraintEnd_toStartOf="@id/user_child_daughter"
        app:layout_constraintTop_toBottomOf="@id/user_child_group">
    </CheckBox>

    <CheckBox
        android:id="@+id/user_child_daughter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:text="@string/daughter"
        android:layout_marginRight="40dp"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_child_group">
    </CheckBox>


    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/sign_up"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_child_son" />


</androidx.constraintlayout.widget.ConstraintLayout>